[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/materials/smoke.tres" type="Material" id=1]
[ext_resource path="res://assets/materials/shockwave.tres" type="Material" id=2]
[ext_resource path="res://assets/audio/sounds/587193__derplayer__explosion-big-02.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/textures/PNG/Explosion/explosion00.png" type="Texture" id=4]
[ext_resource path="res://effects/visual/explosion.gd" type="Script" id=5]
[ext_resource path="res://addons/mrminimal_flipbook_particles/assets/explosions/explosion_01/materials/explosion_01_material.tres" type="Material" id=6]
[ext_resource path="res://effects/visual/smoke.gd" type="Script" id=7]

[sub_resource type="Gradient" id=76]
resource_local_to_scene = true
offsets = PoolRealArray( 0, 0.218978, 0.49635, 0.781022, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.792157, 1, 1, 1, 1, 1, 1, 1, 0.745098, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=105]
resource_local_to_scene = true
gradient = SubResource( 76 )

[sub_resource type="Curve" id=77]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 97.2287 ), 3.5693, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=106]
curve = SubResource( 77 )

[sub_resource type="Curve" id=92]
_data = [ Vector2( 0, 0.534091 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=107]
curve = SubResource( 92 )

[sub_resource type="ParticlesMaterial" id=78]
resource_local_to_scene = true
lifetime_randomness = 0.28
emission_shape = 5
emission_ring_radius = 2.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
emission_ring_axis = Vector3( 0, 0, 1 )
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 1, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.53
angular_velocity = 50.0
angular_velocity_random = 0.5
radial_accel = 1.0
radial_accel_random = 0.45
tangential_accel = 4.32
tangential_accel_random = 0.54
damping = 2.0
damping_random = 0.2
damping_curve = SubResource( 106 )
scale = 5.0
scale_random = 0.39
scale_curve = SubResource( 107 )
color = Color( 0.466667, 0.466667, 0.466667, 1 )
color_ramp = SubResource( 105 )

[sub_resource type="QuadMesh" id=79]
resource_local_to_scene = true
material = ExtResource( 1 )

[sub_resource type="QuadMesh" id=103]

[sub_resource type="Animation" id=104]
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Light:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.776471, 0.580392, 1 ), Color( 0.843137, 0.478431, 0.141176, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Visual/Light:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 30.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Visual/Main:material/0:shader_param/progress")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.999 ]
}

[sub_resource type="Gradient" id=94]
offsets = PoolRealArray( 0, 0.189781, 0.992701, 1 )
colors = PoolColorArray( 1, 0.938272, 0, 0.168627, 0.584314, 0.545098, 0.109804, 0.145098, 0, 0, 0, 0, 0.234375, 0.215807, 0.194092, 0 )

[sub_resource type="GradientTexture" id=95]
gradient = SubResource( 94 )

[sub_resource type="Curve" id=99]
_data = [ Vector2( 0, 0.768229 ), 0.0, 0.26829, 0, 0, Vector2( 0.9875, 0.983422 ), -0.121212, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=100]
curve = SubResource( 99 )

[sub_resource type="ParticlesMaterial" id=96]
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 0.6
gravity = Vector3( 0, 0, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.26
angular_velocity = 50.0
damping = 5.0
scale_curve = SubResource( 100 )
color_ramp = SubResource( 95 )

[sub_resource type="OpenSimplexNoise" id=101]

[sub_resource type="NoiseTexture" id=102]
noise = SubResource( 101 )

[sub_resource type="SpatialMaterial" id=97]
flags_transparent = true
vertex_color_use_as_albedo = true
params_blend_mode = 1
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 1, 1, 0.0588235 )
emission_enabled = true
emission = Color( 0.968627, 1, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 102 )

[sub_resource type="SphereMesh" id=98]
material = SubResource( 97 )

[sub_resource type="Animation" id=82]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Smoke:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sparks:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("old/Shockwave:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("old/Shockwave/ShockOuter:material:refraction_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.05 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("old/Shockwave/RisingDust:material:refraction_enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("old/Shockwave/RisingDust:material:refraction_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.01 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("old/Shockwave/RisingDust:material:roughness")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.05 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("old/Shockwave/RisingDust:inner_radius")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("old/Shockwave/RisingDust:outer_radius")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("old/Shockwave/ShockInner:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("old/Shockwave/ShockInner:material:refraction_scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.014463 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sparks:draw_pass_1:material:albedo_color")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.545098, 0.545098, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("old/Explosion:emitting")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Audio/ExplosionSound:playing")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=83]
resource_name = "explosion"
length = 3.16
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Visual/Smoke:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sparks:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("old/Shockwave:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.07177, 0.965937 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 20, 20, 20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("old/Shockwave/ShockOuter:material:refraction_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = false
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 0.965941, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.1, 0.03, 0.02, 0.014463, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("old/Shockwave/RisingDust:material:refraction_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = false
tracks/4/imported = false
tracks/4/enabled = false
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.05, 0.04, 0.03, 0.02, 0.01, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("old/Shockwave/RisingDust:material:roughness")
tracks/5/interp = 1
tracks/5/loop_wrap = false
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("old/Shockwave/RisingDust:inner_radius")
tracks/6/interp = 1
tracks/6/loop_wrap = false
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 3.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("old/Shockwave/RisingDust:outer_radius")
tracks/7/interp = 1
tracks/7/loop_wrap = false
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 3.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("old/Shockwave/ShockInner:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = false
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0.5, 0.5, 0.5 ), Vector3( 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("old/Shockwave/ShockInner:material:refraction_scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.5, 0.04, 0.03, 0.02, 0.014463, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sparks:draw_pass_1:material:albedo_color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.545098, 0.545098, 0.545098, 1 ), Color( 0.545098, 0.545098, 0.545098, 0 ), Color( 0.545098, 0.545098, 0.545098, 0.0926109 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("old/Explosion:emitting")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Audio/ExplosionSound:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( -0.05 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Visual/Smoke:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("old/Shockwave:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="ParticlesMaterial" id=80]
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, -7, 0 )
initial_velocity = 3.0
initial_velocity_random = 1.0
scale = 0.01

[sub_resource type="SpatialMaterial" id=75]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 0.545098, 0.545098, 0.545098, 1 )
emission_enabled = true
emission = Color( 1, 0.964706, 0, 1 )
emission_energy = 16.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=81]
material = SubResource( 75 )

[sub_resource type="Gradient" id=86]
offsets = PoolRealArray( 0, 0.477273, 1 )
colors = PoolColorArray( 1, 0.896869, 0, 1, 0.883236, 0.564145, 0.117305, 0.466667, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=24]
gradient = SubResource( 86 )

[sub_resource type="Curve" id=87]
_data = [ Vector2( 0.00625001, 0.520079 ), 0.0, 1.45455, 0, 0, Vector2( 0.39375, 0.920079 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -0.118322, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=88]
curve = SubResource( 87 )

[sub_resource type="ParticlesMaterial" id=89]
direction = Vector3( 0, 1, 0 )
spread = 75.88
initial_velocity = 11.63
initial_velocity_random = 0.52
angular_velocity = 50.0
angular_velocity_random = 0.46
damping = 13.73
scale = 2.0
scale_curve = SubResource( 88 )
color_ramp = SubResource( 24 )

[sub_resource type="SpatialMaterial" id=90]
flags_transparent = true
flags_unshaded = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
params_billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 4 )

[sub_resource type="QuadMesh" id=91]
material = SubResource( 90 )

[sub_resource type="OpenSimplexNoise" id=84]

[sub_resource type="NoiseTexture" id=15]
noise = SubResource( 84 )

[sub_resource type="SpatialMaterial" id=85]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.984314, 0.772549, 0.494118, 0.168627 )
metallic_specular = 0.0
roughness = 0.05
roughness_texture = SubResource( 15 )
clearcoat_enabled = true
clearcoat = 1.0
clearcoat_gloss = 0.5
refraction_enabled = true
refraction_scale = 0.01
refraction_texture_channel = 0

[node name="Explosion" type="Spatial"]
script = ExtResource( 5 )

[node name="Audio" type="Spatial" parent="."]

[node name="ExplosionSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 3 )

[node name="Visual" type="Spatial" parent="."]

[node name="Smoke" type="Particles" parent="Visual"]
emitting = false
amount = 10
lifetime = 20.0
one_shot = true
explosiveness = 1.0
randomness = 0.53
visibility_aabb = AABB( -10, -10, -10, 20, 20, 20 )
local_coords = false
process_material = SubResource( 78 )
draw_pass_1 = SubResource( 79 )
script = ExtResource( 7 )

[node name="Light" type="OmniLight" parent="Visual"]
light_color = Color( 0.996078, 0.776471, 0.580392, 1 )
light_energy = 20.0
light_specular = 1.0
shadow_enabled = true
omni_range = 3.0
omni_attenuation = 3.13834

[node name="Main" type="MeshInstance" parent="Visual"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 103 )
skeleton = NodePath("../..")
material/0 = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visual"]
root_node = NodePath("../..")
autoplay = "Explode"
anims/Explode = SubResource( 104 )

[node name="TimerFailsafeDestroy" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="old" type="Node" parent="."]

[node name="ParticlesEmittingSpheres" type="Particles" parent="old"]
visible = false
emitting = false
amount = 20
one_shot = true
explosiveness = 0.83
randomness = 0.54
local_coords = false
process_material = SubResource( 96 )
draw_pass_1 = SubResource( 98 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="old"]
root_node = NodePath("../..")
anims/RESET = SubResource( 82 )
anims/explosion = SubResource( 83 )

[node name="Sparks" type="Particles" parent="old"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
visible = false
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 0.77
randomness = 0.32
local_coords = false
process_material = SubResource( 80 )
draw_pass_1 = SubResource( 81 )

[node name="Explosion" type="Particles" parent="old"]
visible = false
emitting = false
amount = 60
lifetime = 0.58
one_shot = true
explosiveness = 0.82
local_coords = false
process_material = SubResource( 89 )
draw_pass_1 = SubResource( 91 )

[node name="Shockwave" type="Spatial" parent="old"]
transform = Transform( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
visible = false

[node name="ShockOuter" type="CSGSphere" parent="old/Shockwave"]
visible = false
radial_segments = 17
material = ExtResource( 2 )

[node name="ShockInner" type="CSGSphere" parent="old/Shockwave"]
visible = false
operation = 2
radial_segments = 18
material = ExtResource( 2 )

[node name="RisingDust" type="CSGTorus" parent="old/Shockwave"]
transform = Transform( 0.4, 0, 0, 0, 1, 0, 0, 0, 0.4, 0, -0.0305094, 0 )
visible = false
sides = 18
ring_sides = 8
material = SubResource( 85 )

[connection signal="timeout" from="TimerFailsafeDestroy" to="." method="_on_TimerFailsafeDestroy_timeout"]
